# cz_gemini

./: .cz.json  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: bump_version.yml  check_bump.yml  chek_commit_message.yml  publish-to-test-pypi.yml
cz_gemini/: __init__.py  cz_gemini.py  gemini_ai.py  gemini_defaults.py  gemini_exception.py
cz_gemini/templates/: CHANGELOG.adoc.j2  CHANGELOG.md.j2  CHANGELOG.rst.j2  CHANGELOG.textfile.j2
tests/: test_cz_cz_gemeni.py
