[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="cz_gemini"
version="0.3.2"
dependencies = [
        "commitizen>=4.7.2", 
        "google-generativeai"
]
requires-python = ">=3.8"
authors = [
  {name = "Rene´ Juen", email = "jrene6774@gmail.com"},
]
maintainers = [
   {name = "Rene´ Juen", email = "jrene6774@gmail.com"},
]
description = "plugin for autocommit or spellcheck and auto correction"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["commitzen", "google", "gemini"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/avjui/cz_gemini"
Documentation = "https://github.com/avjui/cz_gemini"
Repository = "https://github.com/avjui/cz_gemini.git"
"Bug Tracker" = "https://github.com/avjui/cz_gemini/issues"
Changelog = "https://github.com/avjui/cz_gemini/blob/master/CHANGELOG.md"

